# po-translate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  io.github.yeager.po-translate.metainfo.xml  io.github.yeager.po-translate.yml  po-translate.1  po_translate.py  pyproject.toml
.github/workflows/: ci.yml
.tx/: config
debian/: changelog  copyright
locale/: po-translate.pot
man/af/: po-translate.1
man/ar/: po-translate.1
man/bg/: po-translate.1
man/ca/: po-translate.1
man/cs/: po-translate.1
man/da/: po-translate.1
man/de/: po-translate.1
man/el/: po-translate.1
man/en/: po-translate.1
man/es/: po-translate.1
man/et/: po-translate.1
man/eu/: po-translate.1
man/fa/: po-translate.1
man/fi/: po-translate.1
man/fr/: po-translate.1
man/gl/: po-translate.1
man/he/: po-translate.1
man/hi/: po-translate.1
man/hr/: po-translate.1
man/hu/: po-translate.1
man/id/: po-translate.1
man/it/: po-translate.1
man/ja/: po-translate.1
man/ka/: po-translate.1
man/ko/: po-translate.1
man/lt/: po-translate.1
man/lv/: po-translate.1
man/mk/: po-translate.1
man/ms/: po-translate.1
man/nb/: po-translate.1
man/nl/: po-translate.1
man/nn/: po-translate.1
man/pl/: po-translate.1
man/pt/: po-translate.1
man/ro/: po-translate.1
man/ru/: po-translate.1
man/sk/: po-translate.1
man/sl/: po-translate.1
man/sr/: po-translate.1
man/sv/: po-translate.1
man/th/: po-translate.1
man/tr/: po-translate.1
po/: po-translate.pot  sv.po
scripts/: build-deb.sh  build-rpm.sh  po-translate.spec
tests/: test_po_translate.py
(+26 files in other folders)
